--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,10 @@
       app:navGraph="@navigation/main_navigation" />
 
   <com.google.android.material.navigation.NavigationView
-      android:layout_width="wrap_content"
-      android:id="@+id/nav_view"
-      android:layout_height="0dp"/>
+    android:id="@+id/nav_view"
+    android:layout_width="wrap_content"
+    android:layout_height="0dp"
+    app:menu="@menu/drawer_menu" />
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
