--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/firstFragment2">
+    app:startDestination="@id/firstFragment">
 
     <fragment
-        android:id="@+id/firstFragment2"
+        android:id="@+id/firstFragment"
         android:name="com.android.academy.mentorpetproject.FirstFragment"
         android:label="fragment_first"
         tools:layout="@layout/fragment_first" />
