--- a/app/src/main/res/navigation/profile_navigation.xml
+++ b/app/src/main/res/navigation/profile_navigation.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/profile_navigation">
+    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/profile_navigation"
+    app:startDestination="@id/accountFragment2">
 
+    <fragment
+        android:id="@+id/accountFragment2"
+        android:name="com.android.academy.mentorpetproject.fragments_inside_stack.AccountFragment"
+        android:label="AccountFragment" />
+    <fragment
+        android:id="@+id/notificationsFragment2"
+        android:name="com.android.academy.mentorpetproject.fragments_inside_stack.NotificationsFragment"
+        android:label="NotificationsFragment" />
+    <fragment
+        android:id="@+id/settingsFragment2"
+        android:name="com.android.academy.mentorpetproject.fragments_inside_stack.SettingsFragment"
+        android:label="SettingsFragment" />
 </navigation>
