--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+
+  <color name="primaryColor">#cb8090</color>
+  <color name="primaryLightColor">#ffe2f3</color>
+  <color name="primaryDarkColor">#985263</color>
+  <color name="secondaryColor">#985cff</color>
+  <color name="secondaryLightColor">#ce8cff</color>
+  <color name="secondaryDarkColor">#622dcb</color>
+  <color name="primaryTextColor">#757575</color>
+  <color name="secondaryTextColor">#757575</color>
 </resources>
