fixing issue with not opening of some screens in single display layout; rename labels for opened fragments

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -33,7 +33,7 @@
 
     <fragment
         android:id="@+id/accountFragment"
-        android:label="fragment_account"
+        android:label="AccountFragment"
         android:name="com.android.academy.mentorpetproject.fragments_inside_stack.AccountFragment"
          />
     <fragment
