--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+    <color name="button_ripple">#55000000</color>
+  <color name="mid_light_grey">#d8d8d8</color>
+    <color name="cornflower_10">#CCE8F6</color>
+  <color name="sky_blue">#0091cd</color>
+    <color name="fiord">#1D3355</color>
 </resources>
